Fixed missing path & added WorldGuard as softdepend

--- a/plugin.yml
+++ b/plugin.yml
@@ -6,7 +6,7 @@ softdepend:
    - Vault
    - GriefPrevention
    - BetterRTP
-   #TO DO WorldGuard
+   - WorldGuard
 depend:
    - WorldEdit
 commands:
