--- a/src/main/java/config.yml
+++ b/src/main/java/config.yml
@@ -53,6 +53,7 @@ griefprevention_not_installed: "&cError! GriefPrevention plugin not installed"
 reloading: "&6Reloading plugin..."
 reloaded: "&6Reload compleate!"
 setmode_to: "&6Setting mode to: &3"
+setmode_to_warning: "&6For some changes to be effective you will need to reload the server! \n &6Also, not really working as intended you will have to modify it by hand for now"
 provide_subcommand: "&6Please submit a subcommnd like /hut create"
 worldguard_not_installed: "&cError! WorldGuard plugin not installed"
 not_under: "&cError! You cannot place the structure at this height!"
@@ -62,5 +63,5 @@ help_line3: "&e/hut createat x y z player worldname &6 to create an hut in a spe
 help_line4: "&e/hut reload &6to reload the plugin"
 help_line5: "&e/hut getmode &6to get the current mode of the plugin"
 help_line6: "&e/hut setmode <mode> &6to set a new mode for the plugin"
-help_line7: "&dModes: &eitem: &6The hut can be spawned only from an item, &efirstjoin: &6Automaticly rtps a player and creates and hut the first times they join"
-help_line8: "&ecommand: &6The player will need to use /hut create to be rtped and to spawn the hut, &enotjoin: &6all modes except join, &eall: &6Every mode enabled"
+help_line7: "&dModes: &eitem: &6The hut can be spawned only from an item, \n&efirstjoin: &6Automaticly rtps a player and creates and hut the first times they join"
+help_line8: "&ecommand: &6The player will need to use /hut create to be rtped and to spawn the hut, \n&enotjoin: &6all modes except join, \n&eall: &6Every mode enabled"
